--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "monk": "^6.0.6",
     "nedb": "^1.8.0"
   },
+  "engines": {
+    "node": "0.10.41",
+    "npm": "1.4.29"
+  },
   "devDependencies": {},
   "repository": {
     "type": "git",
