--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "mongo": "^0.1.0",
     "monk": "^6.0.6",
     "nedb": "^1.8.0"
   },
