--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongo": "^0.1.0",
+    "mongodb": "^3.1.13",
     "monk": "^6.0.6",
     "nedb": "^1.8.0"
   },
